--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -118,7 +118,7 @@
     "from random import randint\n",
     "\n",
     "prime = 31\n",
-    "k = randint(1, prime)\n",
+    "k = randint(1,prime)\n",
     "\n",
     "# use range(prime) to iterate over all numbers from 0 to 30 inclusive"
    ]
@@ -200,7 +200,7 @@
     "prime = 31\n",
     "k = randint(1, prime)\n",
     "\n",
-    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive"
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
