--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -85,7 +85,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -170,7 +170,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -317,7 +317,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -336,14 +336,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -351,7 +348,7 @@
     "p = 2**256 - 2**32 - 977\n",
     "x = 0x79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798\n",
     "y = 0x483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8\n",
-    "y**2 % p == (x**3 + 7) % p"
+    "print(y**2 % p == (x**3 + 7) % p)"
    ]
   },
   {
@@ -454,7 +451,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.260s\n",
+      "Ran 1 test in 0.182s\n",
       "\n",
       "OK\n"
      ]
@@ -493,12 +490,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9'\n",
-      "b'039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5'\n",
-      "b'04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b'\n",
-      "b'03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5'\n",
-      "b'04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3'\n",
-      "b'03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e'\n"
+      "049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9\n",
+      "039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5\n",
+      "04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b\n",
+      "03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5\n",
+      "04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3\n",
+      "03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e\n"
      ]
     }
    ],
@@ -522,8 +519,8 @@
     "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
     "    else:\n",
     "        compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
-    "    print(hexlify(uncompressed))\n",
-    "    print(hexlify(compressed))"
+    "    print(hexlify(uncompressed).decode('ascii'))\n",
+    "    print(hexlify(compressed).decode('ascii'))"
    ]
   },
   {
@@ -537,7 +534,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.206s\n",
+      "Ran 1 test in 0.137s\n",
       "\n",
       "OK\n"
      ]
@@ -578,12 +575,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'148dY81A9BmdpMhvYEVznrM45kWN32vSCN'\n",
-      "b'mieaqB68xDCtbUBYFoUNcmZNwk74xcBfTP'\n",
-      "b'1S6g2xBJSED7Qr9CYZib5f4PYVhHZiVfj'\n",
-      "b'mfx3y63A7TfTtXKkv7Y6QzsPFY6QCBCXiP'\n",
-      "b'1226JSptcStqn4Yq9aAmNXdwdc2ixuH9nb'\n",
-      "b'mgY3bVusRUL6ZB2Ss999CSrGVbdRwVpM8s'\n"
+      "148dY81A9BmdpMhvYEVznrM45kWN32vSCN\n",
+      "mieaqB68xDCtbUBYFoUNcmZNwk74xcBfTP\n",
+      "1S6g2xBJSED7Qr9CYZib5f4PYVhHZiVfj\n",
+      "mfx3y63A7TfTtXKkv7Y6QzsPFY6QCBCXiP\n",
+      "1226JSptcStqn4Yq9aAmNXdwdc2ixuH9nb\n",
+      "mgY3bVusRUL6ZB2Ss999CSrGVbdRwVpM8s\n"
      ]
     }
    ],
@@ -616,7 +613,7 @@
     "        # append checksum\n",
     "        total = raw + checksum\n",
     "        # encode_base58 the whole thing\n",
-    "        print(encode_base58(total))"
+    "        print(encode_base58(total).decode('ascii'))"
    ]
   },
   {
@@ -630,7 +627,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.224s\n",
+      "Ran 1 test in 0.144s\n",
       "\n",
       "OK\n"
      ]
@@ -663,7 +660,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "miggo7tzm3GxgLYiwhJpw3wX3r41ezc3pQ\n"
+      "miKegze5FQNCnGw6PKyqUbYUeBa4x2hFeM\n"
      ]
     }
    ],
@@ -672,7 +669,7 @@
     "from ecc import G\n",
     "\n",
     "# use your phone number if you can't think of anything\n",
-    "secret = 5555555\n",
+    "secret = 1800555555518005555555\n",
     "\n",
     "# get the public point\n",
     "point = secret*G\n",
@@ -689,7 +686,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x6c656b1d6e2fc5711b3dfb549c8a02bcf2abeef9b6b94bf1e1128e9ce92b1f84 0x5e567ef74f90348ba543f214f58df4b565d70b77c1b748bd960aa1e361d50459 0xec708cbb0721f5de2148960ea8ae768920e432cfdb1aef68680fc6d98e896ec6\n"
+      "0xf284611c0b8661817931f8f30dd95a7db80b74f0400f3142aca9d93af943a870 0xdc426026ce6a579d8576f26c1df4de339eca17ed1e3ae747aa1a2e86955e3d67 0x56fa3d2dbcd4c0c9c00698cc5628b77c1c066754d36596c742dd0f692ded374f\n"
      ]
     }
    ],
@@ -713,14 +710,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -735,7 +729,7 @@
     "\n",
     "u = z * pow(s, N-2, N) % N\n",
     "v = r * pow(s, N-2, N) % N\n",
-    "(u*G + v*point).x.num == r"
+    "print((u*G + v*point).x.num == r)"
    ]
   },
   {
@@ -820,12 +814,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.349s\n",
+      "Ran 1 test in 0.263s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.360s\n",
+      "Ran 1 test in 0.249s\n",
       "\n",
       "OK\n"
      ]
