--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "#### 1.1. Find out which points are valid on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
+    "#### 1.1. Find out which points are valid on the curve \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
     "```\n",
     "(192,105), (17,56), (200,119), (1,193), (42,99)\n",
     "```\n",
@@ -47,7 +47,6 @@
     "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "\n",
     "# iterate over points\n",
-    "for x_raw, y_raw in points:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -101,7 +100,6 @@
     "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
     "\n",
     "# iterate over the additions to be done\n",
-    "for x1_raw, y1_raw, x2_raw, y2_raw in additions:\n",
     "    # Initialize points this way:\n",
     "    # x1 = FieldElement(x1_raw, prime)\n",
     "    # y1 = FieldElement(y1_raw, prime)\n",
@@ -154,7 +152,6 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
     "# iterate over the multiplications\n",
-    "for s, x_raw, y_raw in multiplications:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -162,7 +159,7 @@
     "    # start product at 0 (point at infinity)\n",
     "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
     "        # add the point to the product\n",
-    "    # print product    \n"
+    "    # print product"
    ]
   },
   {
@@ -234,7 +231,7 @@
     "p = 2**256 - 2**32 - 977\n",
     "x = 0x79BE667EF9DCBBAC55A06295CE870B07029BFCDB2DCE28D959F2815B16F81798\n",
     "y = 0x483ADA7726A3C4655DA4FBFC0E1108A8FD17B448A68554199C47D08FFB10D4B8\n",
-    "y**2 % p == (x**3 + 7) % p"
+    "print(y**2 % p == (x**3 + 7) % p)"
    ]
   },
   {
@@ -294,7 +291,6 @@
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
-    "for secret in secrets:\n",
     "    # get the public point"
    ]
   },
@@ -341,7 +337,6 @@
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
-    "for secret in secrets:\n",
     "    # get public point\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
@@ -398,7 +393,6 @@
     ")\n",
     "\n",
     "# iterate through components\n",
-    "for compressed, secret in components:\n",
     "    # get the public point\n",
     "    # get the sec format\n",
     "    # hash160 the result\n",
@@ -441,7 +435,7 @@
     "from ecc import G\n",
     "\n",
     "# use your phone number if you can't think of anything\n",
-    "secret = 5555555\n",
+    "secret = 1800555555518005555555\n",
     "\n",
     "# get the public point\n",
     "# if you completed 7.2, just do the .address(testnet=True) method on the public point"
@@ -483,7 +477,7 @@
     "\n",
     "u = z * pow(s, N-2, N) % N\n",
     "v = r * pow(s, N-2, N) % N\n",
-    "(u*G + v*point).x.num == r"
+    "print((u*G + v*point).x.num == r)"
    ]
   },
   {
@@ -537,10 +531,8 @@
     "\n",
     "# initialize the public point\n",
     "# use: S256Point(x-coordinate, y-coordinate)\n",
-    "point = S256Point(px, py)\n",
     "\n",
     "# iterate over signatures\n",
-    "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
