--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -112,14 +112,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'15hZo812Lx266Dot6T52krxpnhrNiaqHya'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15hZo812Lx266Dot6T52krxpnhrNiaqHya\n"
+     ]
     }
    ],
    "source": [
@@ -138,7 +135,7 @@
     "# get the 3rd element, which should be the hash160\n",
     "h160 = s.elements[2]\n",
     "# convert h160 to p2pkh address\n",
-    "h160_to_p2pkh_address(h160)"
+    "print(h160_to_p2pkh_address(h160))"
    ]
   },
   {
@@ -152,7 +149,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -193,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'2375044d646ad73594dd0b37b113becdb03964584c9e7e000000000000000000'\n"
+      "2375044d646ad73594dd0b37b113becdb03964584c9e7e000000000000000000\n"
      ]
     }
    ],
@@ -210,7 +207,7 @@
     "# double_sha256 the result\n",
     "result = double_sha256(bin_block)\n",
     "# hexlify to see what it looks like\n",
-    "print(hexlify(result))"
+    "print(hexlify(result).decode('ascii'))"
    ]
   },
   {
@@ -350,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x13ce9000000000000000000000000000000000000000000\n"
+      "0000000000000000013ce9000000000000000000000000000000000000000000\n"
      ]
     }
    ],
@@ -364,7 +361,7 @@
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
-    "print(hex(target))"
+    "print('{:x}'.format(target).zfill(64))"
    ]
   },
   {
@@ -426,7 +423,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "000000000000000x1788f2000000000000000000000000000000000000000000\n",
+      "00000000000000001788f2000000000000000000000000000000000000000000\n",
       "46717549644.70642\n"
      ]
     }
@@ -448,7 +445,7 @@
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
     "target = coefficient * 2**(8*(exponent-3))\n",
     "# print target using print('0x{:x}'.format(target).zfill(64))\n",
-    "print('0x{:x}'.format(target).zfill(64))\n",
+    "print('{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
     "# do the same for the min_bits for min target\n",
@@ -473,7 +470,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -509,14 +506,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -542,7 +536,7 @@
     "# get the target\n",
     "target = b.target()\n",
     "# check proof of work < target\n",
-    "proof < target"
+    "print(proof < target)"
    ]
   },
   {
