--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -36,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n"
+     ]
+    }
+   ],
    "source": [
     "def fib(n):\n",
     "    if n in (0,1):\n",
@@ -277,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "39 % 12"
+    "print(39 % 12)"
    ]
   },
   {
@@ -304,6 +312,108 @@
     "# Exercise 3\n",
     "\n",
     "prime = 19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting from bytes to int and back\n",
+    "\n",
+    "Converting from bytes to integer requires learning about Big and Little Endian encoding. Essentially any number greater than 255 can be encoded in two ways, with the \"Big End\" going first or the \"Little End\" going first.\n",
+    "\n",
+    "Normal human reading is from the \"Big End\". For example 123 is read as 100 + 20 + 3. Some computer systems encode integers with the \"Little End\" first.\n",
+    "\n",
+    "A number like 500 is encoded this way in Big Endian:\n",
+    "\n",
+    "0x01f4 (256 + 244)\n",
+    "\n",
+    "But this way in Little Endian:\n",
+    "\n",
+    "0xf401 (244 + 256)\n",
+    "\n",
+    "In Python we can convert an integer to big or little endian using a built-in method:\n",
+    "\n",
+    "```python\n",
+    "n = 1234567890\n",
+    "big_endian = n.to_bytes(4, 'big')  # b'\\x49\\x96\\x02\\xd2'\n",
+    "little_endian = n.to_bytes(4, 'little')  # b'\\xd2\\x02\\x96\\x49'\n",
+    "```\n",
+    "\n",
+    "We can also convert from bytes to an integer this way:\n",
+    "\n",
+    "```python\n",
+    "big_endian = b'\\x49\\x96\\x02\\xd2'\n",
+    "n = int.from_bytes(big_endian, 'big')  # 1234567890\n",
+    "little_endian = b'\\xd2\\x02\\x96\\x49'\n",
+    "n = int.from_bytes(little_endian, 'little')  # 1234567890\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from binascii import hexlify\n",
+    "\n",
+    "n = 1234567890\n",
+    "big_endian = n.to_bytes(4, 'big')\n",
+    "little_endian = n.to_bytes(4, 'little')\n",
+    "\n",
+    "print(hexlify(big_endian).decode('ascii'))\n",
+    "print(hexlify(little_endian).decode('ascii'))\n",
+    "\n",
+    "print(int.from_bytes(big_endian, 'big'))\n",
+    "print(int.from_bytes(little_endian, 'little'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "\n",
+    "1. Convert the following:\n",
+    "\n",
+    " * 8675309 to 8 bytes in big endian\n",
+    " * interpret ```b'\\x11\\x22\\x33\\x44\\x55'``` as a little endian integer\n",
+    "\n",
+    "2. Make the following tests pass:\n",
+    "\n",
+    "```\n",
+    "helper.py:test_little_endian_to_int\n",
+    "helper.py:test_int_to_little_endian\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 4.1\n",
+    "\n",
+    "n = 8675309\n",
+    "# find the big endian representation in 8 bytes of this number\n",
+    "\n",
+    "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
+    "# find what this number is in little endian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 4.2\n",
+    "\n",
+    "reload(helper)\n",
+    "run_test(helper.HelperTest('test_little_endian_to_int'))\n",
+    "run_test(helper.HelperTest('test_int_to_little_endian'))"
    ]
   }
  ],
