--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -240,7 +240,7 @@
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
-    "print(hex(target))"
+    "print('{:x}'.format(target).zfill(64))"
    ]
   },
   {
