--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -253,9 +253,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python Libraries\n",
+    "### Python Tricks\n",
     "\n",
-    "`binascii` is what we use to convert binary to/from hex like so:"
+    "Here is how we convert binary to/from hex:"
    ]
   },
   {
@@ -267,16 +267,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'68656c6c6f20776f726c64'\n",
+      "68656c6c6f20776f726c64\n",
       "b'hello world'\n"
      ]
     }
    ],
    "source": [
-    "from binascii import hexlify, unhexlify\n",
-    "\n",
-    "print(hexlify(b'hello world'))\n",
-    "print(unhexlify('68656c6c6f20776f726c64'))"
+    "print(b'hello world'.hex())\n",
+    "print(bytes.fromhex('68656c6c6f20776f726c64'))"
    ]
   },
   {
@@ -299,23 +297,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0'\n"
+      "9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0\n"
      ]
     }
    ],
    "source": [
     "# Exercise 2\n",
     "\n",
-    "from binascii import hexlify, unhexlify\n",
-    "\n",
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
-    "# convert to binary (unhexlify)\n",
-    "b = unhexlify(h)\n",
+    "# convert to binary (bytes.fromhex)\n",
+    "b = bytes.fromhex(h)\n",
     "# reverse ([::-1])\n",
     "b_rev = b[::-1]\n",
-    "# convert to hex (hexlify)\n",
-    "h_rev = hexlify(b_rev)\n",
+    "# convert to hex()\n",
+    "h_rev = b_rev.hex()\n",
     "print(h_rev)"
    ]
   },
@@ -451,14 +447,12 @@
     }
    ],
    "source": [
-    "from binascii import hexlify\n",
-    "\n",
     "n = 1234567890\n",
     "big_endian = n.to_bytes(4, 'big')\n",
     "little_endian = n.to_bytes(4, 'little')\n",
     "\n",
-    "print(hexlify(big_endian).decode('ascii'))\n",
-    "print(hexlify(little_endian).decode('ascii'))\n",
+    "print(big_endian.hex())\n",
+    "print(little_endian.hex())\n",
     "\n",
     "print(int.from_bytes(big_endian, 'big'))\n",
     "print(int.from_bytes(little_endian, 'little'))"
