--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -451,7 +451,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.182s\n",
+      "Ran 1 test in 0.402s\n",
       "\n",
       "OK\n"
      ]
@@ -501,7 +501,6 @@
    ],
    "source": [
     "# Exercise 6.1\n",
-    "from binascii import hexlify\n",
     "\n",
     "from ecc import G\n",
     "\n",
@@ -519,8 +518,8 @@
     "        compressed = b'\\x03' + point.x.num.to_bytes(32, 'big')\n",
     "    else:\n",
     "        compressed = b'\\x02' + point.x.num.to_bytes(32, 'big')\n",
-    "    print(hexlify(uncompressed).decode('ascii'))\n",
-    "    print(hexlify(compressed).decode('ascii'))"
+    "    print(uncompressed.hex())\n",
+    "    print(compressed.hex())"
    ]
   },
   {
@@ -534,7 +533,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.137s\n",
+      "Ran 1 test in 0.280s\n",
       "\n",
       "OK\n"
      ]
@@ -627,7 +626,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.144s\n",
+      "Ran 1 test in 0.320s\n",
       "\n",
       "OK\n"
      ]
@@ -686,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0xf284611c0b8661817931f8f30dd95a7db80b74f0400f3142aca9d93af943a870 0xdc426026ce6a579d8576f26c1df4de339eca17ed1e3ae747aa1a2e86955e3d67 0x56fa3d2dbcd4c0c9c00698cc5628b77c1c066754d36596c742dd0f692ded374f\n"
+      "0xdcfe2169c77a770a24231355d622753d9d6fb389151ff19466ae59e0946b0cc 0xec54dd28ba48457c02e4412c36189b04bfa1ead772d40fd464cb8e3b7a20099e 0xc9268d5e0a2fb0768dbf796e2c18e9e4f8978a8d9cd20d54dcf36f3a16441cfe\n"
      ]
     }
    ],
@@ -814,12 +813,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.263s\n",
+      "Ran 1 test in 0.534s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.249s\n",
+      "Ran 1 test in 0.538s\n",
       "\n",
       "OK\n"
      ]
