--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -47,6 +47,7 @@
     "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "\n",
     "# iterate over points\n",
+    "for x_raw, y_raw in points:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -100,6 +101,7 @@
     "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
     "\n",
     "# iterate over the additions to be done\n",
+    "for x1_raw, y1_raw, x2_raw, y2_raw in additions:\n",
     "    # Initialize points this way:\n",
     "    # x1 = FieldElement(x1_raw, prime)\n",
     "    # y1 = FieldElement(y1_raw, prime)\n",
@@ -152,6 +154,7 @@
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
     "\n",
     "# iterate over the multiplications\n",
+    "for s, x_raw, y_raw in multiplications:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
@@ -330,7 +333,6 @@
    "outputs": [],
    "source": [
     "# Exercise 6.1\n",
-    "from binascii import hexlify\n",
     "\n",
     "from ecc import G\n",
     "\n",
@@ -393,6 +395,7 @@
     ")\n",
     "\n",
     "# iterate through components\n",
+    "for compressed, secret in components:\n",
     "    # get the public point\n",
     "    # get the sec format\n",
     "    # hash160 the result\n",
@@ -533,6 +536,7 @@
     "# use: S256Point(x-coordinate, y-coordinate)\n",
     "\n",
     "# iterate over signatures\n",
+    "for z, r, s in signatures:\n",
     "    # u = z / s, v = r / s\n",
     "    # finally, uG+vP should have the x-coordinate equal to r"
    ]
