--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -90,13 +90,12 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from helper import h160_to_p2pkh_address\n",
     "from script import Script\n",
     "\n",
     "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
     "\n",
-    "# unhexlify to get binary\n",
+    "# bytes.fromhex to get binary\n",
     "# parse with Script\n",
     "# get the 3rd element, which should be the hash160\n",
     "# convert h160 to p2pkh address"
@@ -141,14 +140,13 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "from binascii import hexlify, unhexlify\n",
     "from helper import double_sha256\n",
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# unhexlify to get the binary\n",
+    "# bytes.fromhex to get the binary\n",
     "# double_sha256 the result\n",
-    "# hexlify to see what it looks like"
+    "# hex() to see what it looks like"
    ]
   },
   {
@@ -175,26 +173,18 @@
    "source": [
     "# Version Signaling Example\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from io import BytesIO\n",
     "from block import Block\n",
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# unhexlify to get the binary block\n",
-    "bin_block = unhexlify(hex_block)\n",
+    "# bytes.fromhex to get the binary block\n",
     "# create a stream using BytesIO\n",
-    "stream = BytesIO(bin_block)\n",
     "# parse the block\n",
-    "b = Block.parse(stream)\n",
     "# get the version\n",
-    "version = b.version\n",
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
-    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
-    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
    ]
   },
   {
@@ -233,10 +223,9 @@
    "source": [
     "# Calculating Target from Bits Example\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from helper import little_endian_to_int\n",
     "\n",
-    "bits = unhexlify('e93c0118')\n",
+    "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
@@ -251,15 +240,14 @@
    "source": [
     "# Calculating Difficulty from Target Example\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from helper import little_endian_to_int\n",
     "\n",
-    "bits = unhexlify('e93c0118')\n",
+    "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
     "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
     "\n",
-    "bits_min = unhexlify('ffff001d')\n",
+    "bits_min = bytes.fromhex('ffff001d')\n",
     "exponent_min = bits_min[-1]\n",
     "coefficient_min = little_endian_to_int(bits_min[:-1])\n",
     "min = coefficient_min*2**(8*(exponent_min-3))\n",
@@ -293,12 +281,11 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from helper import little_endian_to_int\n",
     "\n",
     "hex_bits = 'f2881718'\n",
     "\n",
-    "# unhexlify to get the bits\n",
+    "# bytes.fromhex to get the bits\n",
     "# last byte is exponent\n",
     "# first three bytes are the coefficient in little endian\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
@@ -347,14 +334,13 @@
    "source": [
     "# Exercise 7.1\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from io import BytesIO\n",
     "from helper import double_sha256, little_endian_to_int\n",
     "from block import Block\n",
     "\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
-    "# unhexlify to get the binary block\n",
+    "# bytes.fromhex to get the binary block\n",
     "# double_sha256 the block\n",
     "# interpret the result as a number in little endian\n",
     "# make a stream using BytesIO\n",
