--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -36,17 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "89\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fib(n):\n",
     "    if n in (0,1):\n",
@@ -211,9 +203,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python Libraries\n",
+    "### Python Tricks\n",
     "\n",
-    "`binascii` is what we use to convert binary to/from hex like so:"
+    "Here is how we convert binary to/from hex:"
    ]
   },
   {
@@ -222,10 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from binascii import hexlify, unhexlify\n",
-    "\n",
-    "print(hexlify(b'hello world'))\n",
-    "print(unhexlify('68656c6c6f20776f726c64'))"
+    "print(b'hello world'.hex())\n",
+    "print(bytes.fromhex('68656c6c6f20776f726c64'))"
    ]
   },
   {
@@ -247,13 +237,11 @@
    "source": [
     "# Exercise 2\n",
     "\n",
-    "from binascii import hexlify, unhexlify\n",
-    "\n",
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
-    "# convert to binary (unhexlify)\n",
+    "# convert to binary (bytes.fromhex)\n",
     "# reverse ([::-1])\n",
-    "# convert to hex (hexlify)"
+    "# convert to hex()"
    ]
   },
   {
@@ -311,7 +299,10 @@
    "source": [
     "# Exercise 3\n",
     "\n",
-    "prime = 19"
+    "prime = 19\n",
+    "# 99\n",
+    "# 456*444\n",
+    "# 9**77"
    ]
   },
   {
@@ -356,14 +347,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from binascii import hexlify\n",
-    "\n",
     "n = 1234567890\n",
     "big_endian = n.to_bytes(4, 'big')\n",
     "little_endian = n.to_bytes(4, 'little')\n",
     "\n",
-    "print(hexlify(big_endian).decode('ascii'))\n",
-    "print(hexlify(little_endian).decode('ascii'))\n",
+    "print(big_endian.hex())\n",
+    "print(little_endian.hex())\n",
     "\n",
     "print(int.from_bytes(big_endian, 'big'))\n",
     "print(int.from_bytes(little_endian, 'little'))"
@@ -397,10 +386,10 @@
     "# Exercise 4.1\n",
     "\n",
     "n = 8675309\n",
-    "# find the big endian representation in 8 bytes of this number\n",
+    "# print n in 8 big endian bytes\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
-    "# find what this number is in little endian"
+    "# print little endian in decimal"
    ]
   },
   {
