--- a/session4.ipynb
+++ b/session4.ipynb
@@ -119,7 +119,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -204,6 +204,8 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
+    "from tx import TxIn\n",
+    "\n",
     "prev_tx = bytes.fromhex('d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81') \n",
     "prev_index = 0\n",
     "\n",
@@ -230,12 +232,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.635s\n",
+      "Ran 1 test in 0.509s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -323,7 +325,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 2.321s\n",
+      "Ran 1 test in 1.652s\n",
       "\n",
       "OK\n"
      ]
@@ -383,7 +385,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.370s\n",
+      "Ran 1 test in 0.576s\n",
       "\n",
       "OK\n"
      ]
