fixed some annoying bugs

--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -145,6 +145,8 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
+    "from tx import TxIn\n",
+    "\n",
     "prev_tx = bytes.fromhex('d1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81') \n",
     "prev_index = 0\n",
     "\n",
@@ -351,7 +353,7 @@
     "stream = BytesIO(bytes.fromhex(hex_tx))\n",
     "index = 0\n",
     "\n",
-    "# parse the transaction using Tx.Parse\n",
+    "# parse the transaction using Tx.parse\n",
     "# grab the input at index\n",
     "# use the input's der_signature, sec_pubkey and hash_type methods to get data\n",
     "# parse the signature using Signature.parse\n",
