--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -178,13 +178,36 @@
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# bytes.fromhex to get the binary block\n",
+    "bin_block = bytes.fromhex(hex_block)\n",
     "# create a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
     "# parse the block\n",
+    "b = Block.parse(stream)\n",
     "# get the version\n",
+    "version = b.version\n",
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
+    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
+    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
+    "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n\",\n",
+    "     \"# get the version\\n\",\n",
+    "-    \"version = b.version\\n\",\n",
+    "     \"# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\\n\",\n",
+    "-    \"print('BIP9: {}'.format(version >> 29 == 0b001))\\n\",\n",
+    "     \"# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\\n\",\n",
+    "-    \"print('BIP91: {}'.format(version >> 4 & 1 == 1))\\n\",\n",
+    "-    \"# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\\n\",\n",
+    "-    \"print('BIP141: {}'.format(version >> 1 & 1 == 1))"
    ]
   },
   {
@@ -289,7 +312,7 @@
     "# last byte is exponent\n",
     "# first three bytes are the coefficient in little endian\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
-    "# print target using print('0x{:x}'.format(target).zfill(64))\n",
+    "# print target using print('{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
     "# do the same for the min_bits for min target\n",
