--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -190,24 +190,16 @@
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
     "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
     "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
+    "print('BIP141: {}'.format(version >> 1 & 1 == 1))\n",
+    "\n",
+    "# get the version\n",
+    "version = b.version\n",
+    "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
+    "print('BIP9: {}'.format(version >> 29 == 0b001))\n",
+    "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
+    "print('BIP91: {}'.format(version >> 4 & 1 == 1))\n",
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
     "print('BIP141: {}'.format(version >> 1 & 1 == 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n\",\n",
-    "     \"# get the version\\n\",\n",
-    "-    \"version = b.version\\n\",\n",
-    "     \"# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\\n\",\n",
-    "-    \"print('BIP9: {}'.format(version >> 29 == 0b001))\\n\",\n",
-    "     \"# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\\n\",\n",
-    "-    \"print('BIP91: {}'.format(version >> 4 & 1 == 1))\\n\",\n",
-    "-    \"# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\\n\",\n",
-    "-    \"print('BIP141: {}'.format(version >> 1 & 1 == 1))"
    ]
   },
   {
