--- a/session3.ipynb
+++ b/session3.ipynb
@@ -21,6 +21,8 @@
    "source": [
     "### Exercise 1\n",
     "\n",
+    "WIF is the serialization of a Private Key.\n",
+    "\n",
     "#### 1.1. Find the WIF Format of the following:\n",
     "\n",
     "* \\\\(2^{256}-2^{199}\\\\), mainnet, compressed\n",
